# cal

./: .env  .gitignore  Cargo.toml  LivsmedelsDB_202312292029.csv
assets/: root.css
migrations/2023-12-16-155919_create_users/: up.sql
migrations/2023-12-29-144432_food/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs  ui.rs
