[package]
name = "track-notes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-session = { version="0.8.0", features=["cookie-session"] }
actix-web = "4"
argon2 = "0.5.2"
clap = { version = "4.4.12", features = ["derive"] }
diesel = { version = "2.1.0", features = ["sqlite", "r2d2"] }
leptos = { version="0.5.4", default-features = false, features=["template_macro"]}
maud = { version="0.25.0", features = ["actix-web"] }
r2d2 = "0.8.10"
rand = "0.7"
serde = { version="1.0.193", features = ["derive", "serde_derive"] }
simple-error = "0.1.9"
